[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Editor Demo"
bundle = "org.beeware"
version = "0.3.0.dev37"
url = "https://beeware.org"
license = "BSD license"
author = 'Tiberius Yak'
author_email = "tiberius@beeware.org"

[tool.briefcase.app.editor]
formal_name = "Editor Demo"
description = "A testing app"
sources = ['editor']
requires = [
    '../../src/core',
]


[tool.briefcase.app.editor.macOS]
requires = [
    '../../src/cocoa',
    'std-nslog>=1.0.0',
]

[tool.briefcase.app.editor.linux]
requires = [
    '../../src/gtk',
]

[tool.briefcase.app.editor.windows]
requires = [
    '../../src/winforms',
]

# Mobile deployments
[tool.briefcase.app.editor.iOS]
requires = [
    '../../src/iOS',
    'std-nslog>=1.0.0',
]

[tool.briefcase.app.editor.android]
requires = [
    '../../src/android',
]
